text spacing in search field, fixes #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -29,6 +29,7 @@
 
     // The actual search input
     #globalsearch-input {
+        padding-left: 5px;
         width: @hidden-width;
         .transition(width @transition-duration);
     }
